--- a/src/style.css
+++ b/src/style.css
@@ -68,6 +68,7 @@ body{
 header{
     width: 100vw;
     background: #177ECA;
+    z-index: 10;
 } 
     @media (min-width: 630px) {
       header {
@@ -89,7 +90,7 @@ header{
     }
 .banner{
     width: 71.1vw;
-    height: 49vh;
+    height: 50vh;
     min-height: 10vh;
     max-height: 50vh;
     margin: auto;
@@ -346,34 +347,33 @@ header label:hover{
     background-repeat: no-repeat;
     padding: 0;
     background-size: 100% 100%;
-    flex-flow: column wrap;
     color: white;
     font-weight: bold;
     }
-.cards{
-    display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
-}
+.pokemon-container{
+    grid-template-columns: 100px 50px 100px;
+    grid-template-rows: 80px auto 80px; 
+    column-gap: 10px;
+    row-gap: 15px;
+    color: black;
+    border: black;
+}  
 .card{
-    background-color: red;
-    color: saddlebrown;
-    transition: all 0,3 ease-out;
-}
-.card img{
-    height: auto;
-    width: 100wv;
+    background-color: rgba(255, 255, 255, 0.8);
+    border: 1px solid rgba(0, 0, 0, 0.8);
+    padding: 20px;
+    font-size: 20px;
+    text-align: center;
+    column-count:6;
 }
 card figcaption{
     padding: 1rem;
 }
-.filter{
-    visibility: hidden;
-    opacity: 0;
-    order:1;
+
+#imgPoke{
+    width: 50px;
+    height: 50px;
 }
-
-
-
 
 
 .footer2{
@@ -382,4 +382,4 @@ card figcaption{
     height: 10vh;
     background: #dd000098 ;
     top:190vh;
-        }
+    }
