--- a/src/style.css
+++ b/src/style.css
@@ -225,7 +225,7 @@ header label:hover{
     text-align: center;
     border-radius: 20px;
 }
-#imgInicio{
+.imgInicio{
     width: 21vw;
     margin-top: 1vh;
     height: 30vh;
@@ -344,7 +344,7 @@ header label:hover{
     padding: 0;
     font-weight: bold;
     margin: 0;
-    background: url("images/fondo2.png");
+    background: url("images/pokedex1.png");
     background-repeat: space space;
     background-attachment: fixed;
     background-size: 100% 100%;
@@ -352,7 +352,7 @@ header label:hover{
 .pokedex{
     display: inline-block;
     margin-left: 6vw;
-    color:white;
+    color:rgb(190, 0, 0);
     -webkit-text-stroke: 2px rgb(190, 0, 0);
     font-size: 2.5em;
 }
@@ -513,11 +513,11 @@ header label:hover{
     list-style: none;
     padding: 0;
 }
-#clasificacion{
+.clasificacion{
     display: flex;
     position: absolute;
     margin-left: 3vw;
-    color:white;
+    color:rgb(190, 0, 0);
     -webkit-text-stroke: 2px rgb(190, 0, 0);
     font-size: 1.8em;
     width: 50vw;
@@ -1614,7 +1614,7 @@ header label:hover{
 .equipo{
     display: inline-block;
     margin-left: 36vw;
-    color:white;
+    color:rgb(190, 108, 0);
     -webkit-text-stroke: 2px rgb(190, 108, 0);
     font-size: 2.1em;
     padding: 0;
@@ -1744,7 +1744,7 @@ header label:hover{
     display: flex;
     position: absolute;
     width: 100vw;
-    height: 7710vh;
+    height: 4710vh;
     padding: 0;
     font-weight: bold;
     margin: 0;
@@ -1753,13 +1753,95 @@ header label:hover{
     background-attachment: fixed;
     background-size: 100% 100%;
 }
+.equipoEvo{
+    display: inline-block;
+    margin-left: 36vw;
+    color:  rgb(0, 24, 161);
+    -webkit-text-stroke: 2px rgb(0, 24, 161);
+    font-size: 2.1em;
+    padding: 0;
+}
 .footer4{
     position: absolute;
     align-items: flex-end;
     width: 100vw;
     height: 10vh;
-    margin-top: 7520vh;
+    margin-top: 4520vh;
     background: #0d02ad98 ;
     top:190vh;
     z-index: 9;
+}
+.pokemon-evolucion{
+    display: grid;
+    height: 8vh;
+    width: 70vw;
+    column-gap: 1.4vw;
+    row-gap: 2vh;
+    grid-template-columns: repeat(3,20vw);
+    grid-template-rows: repeat(51, 49vh);
+    color: black;
+    margin:2vh 0 0 4vw;
+    padding: 0; 
+    margin-left: 20vw; 
+}
+.cardsEvolucion{
+    background: #016ae2c5;
+    text-align: center;
+    margin: 0;
+    border-radius: 10px;
+    transition: all 0.5s;
+}   
+.namePokeEvolucion{
+    color: rgb(255, 255, 255);
+    text-transform: capitalize;
+    margin:0 0 1vh 0;
+    padding-top: 1.8vh;
+    padding-bottom: 1.8vh;
+    border-top-left-radius: 10px;
+    border-top-right-radius:10px; 
+}
+.imgPokeEvolucion{
+    width: 11vw;
+    height: 21vh;
+}
+.numPokeEvolucion{
+    margin:0;
+    width:12vw ;
+    margin-left: 4vw;
+    color: rgb(255, 255, 255);
+    background: #00ddcb;
+    padding: 0.7vh 0.7vw;
+    border-top-left-radius: 5px;
+    border-top-right-radius:5px;
+}
+.typesPokeEvolucion{
+    text-transform: capitalize;
+    margin:  0 0 0 1vw;
+    padding-top: 1.7vh;
+    border-top-left-radius: 10px;
+    border-top-right-radius:10px;
+    border-bottom-left-radius: 10px; 
+    font-size: 1.1em;
+    color: rgb(255, 255, 255);
+}
+.informationEvolucion{
+    display: flex;
+    width: 15vw;
+    height:12.1vh;
+    font-size: 14px;
+    text-align: center;
+    padding-top: 1vh;
+    margin-left: 2.5vw;
+    align-items: stretch;
+    background: #cab8cfc2; 
+    border-radius: 5px;
+    color: #574002;
+}
+.atributesCandy{
+    margin-right: 0.5vw;
+    text-transform: capitalize;
+    color: rgb(255, 255, 255);
+    width: 7vw;
+    padding-left: 1vw;
+    text-align: left;
 }
