--- a/src/style.css
+++ b/src/style.css
@@ -242,7 +242,7 @@ header label:hover{
     padding: 3vh 1vw;
     border-radius: 20px;
 }
-#imgInicio2{
+.imgInicio2{
     width: 17vw;
     height: 27vh;
     margin-top: 3vh;
@@ -354,7 +354,36 @@ header label:hover{
     margin-left: 6vw;
     color:rgb(190, 0, 0);
     -webkit-text-stroke: 2px rgb(190, 0, 0);
-    font-size: 2.5em;
+    font-size: 2.2em;
+}
+.btn-flotante {
+	font-size: 0.8em; 
+	text-transform: uppercase;
+    text-orientation: upright;
+	font-weight: bold; 
+	color: #ffffff;
+	border-radius: 5px; 
+	background-color: rgb(190, 0, 0);
+	padding: 60px 19px; /* Relleno del boton */
+	position: fixed;
+	bottom: 5vh;
+    left: 8vw;
+	transition: all 900ms ease 0ms;
+	box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+	z-index: 99;
+}
+.btn-flotante:hover {
+	background-color: #2c2fa5; /* Color de fondo al pasar el cursor */
+	box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.3);
+	transform: translateY(-7px);
+}
+@media only screen and (max-width: 600px) {
+ 	.btn-flotante {
+		font-size: 14px;
+		padding: 12px 20px;
+		bottom: 20px;
+		right: 20px;
+	}
 }
 .pokemon-container{
     display: grid;
@@ -1616,7 +1645,7 @@ header label:hover{
     margin-left: 36vw;
     color:rgb(190, 108, 0);
     -webkit-text-stroke: 2px rgb(190, 108, 0);
-    font-size: 2.1em;
+    font-size: 2.0em;
     padding: 0;
 }
 .equipo2{
@@ -1758,7 +1787,7 @@ header label:hover{
     margin-left: 36vw;
     color:  rgb(0, 24, 161);
     -webkit-text-stroke: 2px rgb(0, 24, 161);
-    font-size: 2.1em;
+    font-size: 2em;
     padding: 0;
 }
 .footer4{
@@ -1844,4 +1873,5 @@ header label:hover{
     width: 7vw;
     padding-left: 1vw;
     text-align: left;
+    margin-top: 1vh;
 }
