--- a/src/style.css
+++ b/src/style.css
@@ -355,27 +355,35 @@ header label:hover{
     color:rgb(190, 0, 0);
     -webkit-text-stroke: 2px rgb(190, 0, 0);
     font-size: 2.2em;
+    background: rgba(255, 250, 250, 0.767);
+    border-radius: 5px;
 }
 .btn-flotante {
 	font-size: 0.8em; 
 	text-transform: uppercase;
-    text-orientation: upright;
 	font-weight: bold; 
 	color: #ffffff;
 	border-radius: 5px; 
-	background-color: rgb(190, 0, 0);
-	padding: 60px 19px; /* Relleno del boton */
+	background-color: rgba(190, 0, 0, 0.966);
+	padding: 40px 25px; 
 	position: fixed;
 	bottom: 5vh;
     left: 8vw;
 	transition: all 900ms ease 0ms;
 	box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
 	z-index: 99;
+    text-decoration: none;
 }
 .btn-flotante:hover {
-	background-color: #2c2fa5; /* Color de fondo al pasar el cursor */
+	background-color: #2c2fa5; 
 	box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.3);
 	transform: translateY(-7px);
+}
+.pikachu{
+    position:absolute;
+    right: 0.8vw;
+    bottom: 9.5vh;
+    left: 1.1vw;
 }
 @media only screen and (max-width: 600px) {
  	.btn-flotante {
@@ -394,9 +402,10 @@ header label:hover{
     grid-template-columns: repeat(5,14vw);
     grid-template-rows: repeat(51, 47.4vh);
     color: black;
-    margin:2vh 0 0 4vw;
+    margin:4vh 0 0 4vw;
     padding: 0; 
     margin-left: 20vw; 
+    margin-top: 8vh;
 }
 .pokemon-container-descendentes{
     display: grid;
@@ -407,9 +416,10 @@ header label:hover{
     grid-template-columns: repeat(5,14vw);
     grid-template-rows: repeat(51, 47.4vh);
     color: black;
-    margin:2vh 0 0 4vw;
+    margin:4vh 0 0 4vw;
     padding: 0; 
     margin-left: 20vw; 
+    margin-top: 8vh;
 }
 .cards{
     background: #ff80809a;
@@ -473,7 +483,7 @@ header label:hover{
     width: 14vw;
     height: 25vh;
     background: #CB2438;
-    margin-left: 2vw;
+    margin-left: 3vw;
     padding: 0;
     border-radius: 10px;
     bottom: 20px;
@@ -492,6 +502,7 @@ header label:hover{
     position: relative;
     background: #EBEBEB;
     padding: 0;
+    padding-top: 1.8vh;
     height: 16vh;
     width: 14vw;
     border-radius: 5px;
@@ -504,6 +515,7 @@ header label:hover{
 .contenedor_ordenar li{
     list-style: none;
     padding: 0;
+    margin-left:-1vw;
 }
 .contenedor_filtro{
     display: flex;
@@ -532,6 +544,7 @@ header label:hover{
     height: 66vh;
     width: 13vw;
     border-radius: 5px;
+    margin-right: 2vw;
 }
 .contenedor_filtro a{
     text-decoration: none;
@@ -540,6 +553,7 @@ header label:hover{
 }
 .contenedor_filtro li{
     list-style: none;
+   
     padding: 0;
 }
 .clasificacion{
@@ -548,7 +562,7 @@ header label:hover{
     margin-left: 3vw;
     color:rgb(190, 0, 0);
     -webkit-text-stroke: 2px rgb(190, 0, 0);
-    font-size: 1.8em;
+    font-size: 1.65em;
     width: 50vw;
     margin-top: -10vh;
     text-align: left;
@@ -562,11 +576,12 @@ header label:hover{
     grid-template-columns: repeat(1,80vw);
     grid-template-rows: repeat(200, 47.4vh);
     color: black;
-    margin:2vh 0 0 4vw;
+    margin:4vh 0 0 4vw;
     padding: 0; 
     margin-left: 10vw;
     justify-content: stretch; 
     align-items: stretch;
+    margin-top: 8vh;
 }
 .pokemon-container-typeSteel{
     display: grid;
@@ -1647,6 +1662,8 @@ header label:hover{
     -webkit-text-stroke: 2px rgb(190, 108, 0);
     font-size: 2.0em;
     padding: 0;
+    background: rgba(255, 254, 250, 0.767);
+    border-radius: 5px;
 }
 .equipo2{
     display: inline-block;
@@ -1656,6 +1673,35 @@ header label:hover{
     padding: 0;
     margin-top: 1vh;
     margin-bottom: 2vh;
+}
+.btn-flotante2 {
+	font-size: 0.8em; 
+	text-transform: uppercase;
+	font-weight: bold; 
+	color: #ffffff;
+	border-radius: 5px; 
+	background-color: rgba(190, 123, 0, 0.938);
+	padding: 40px 25px; 
+	position: fixed;
+	bottom: 5vh;
+    left: 6vw;
+	transition: all 900ms ease 0ms;
+	box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+	z-index: 99;
+    text-decoration: none;
+}
+.btn-flotante2:hover {
+	background-color: #2c2fa5; 
+	box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.3);
+	transform: translateY(-7px);
+}
+@media only screen and (max-width: 600px) {
+ 	.btn-flotante2 {
+		font-size: 14px;
+		padding: 12px 20px;
+		bottom: 20px;
+		right: 20px;
+	}
 }
 .footer3{
     position: absolute;
@@ -1678,7 +1724,7 @@ header label:hover{
     color: black;
     margin:2vh 0 0 4vw;
     padding: 0; 
-    margin-left: 15vw; 
+    margin-left: 17vw; 
 }
 .cardsBatalla{
     background: #ffe880c5;
@@ -1773,7 +1819,7 @@ header label:hover{
     display: flex;
     position: absolute;
     width: 100vw;
-    height: 4710vh;
+    height: 4310vh;
     padding: 0;
     font-weight: bold;
     margin: 0;
@@ -1784,18 +1830,49 @@ header label:hover{
 }
 .equipoEvo{
     display: inline-block;
-    margin-left: 36vw;
-    color:  rgb(0, 24, 161);
-    -webkit-text-stroke: 2px rgb(0, 24, 161);
+    margin-left: 34vw;
+    color:  rgb(27, 53, 202);
+    -webkit-text-stroke: 2px rgb(27, 53, 202);
     font-size: 2em;
     padding: 0;
+    background: rgba(250, 251, 255, 0.767);
+    border-radius: 5px;
+}
+.btn-flotante3 {
+	font-size: 0.8em; 
+	text-transform: uppercase;
+	font-weight: bold; 
+	color: #ffffff;
+	border-radius: 5px; 
+	background-color: rgba(0, 104, 190, 0.959);
+	padding: 40px 25px; 
+	position: fixed;
+	bottom: 5vh;
+    left: 6vw;
+	transition: all 900ms ease 0ms;
+	box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+	z-index: 99;
+    text-decoration: none;
+}
+.btn-flotante3:hover {
+	background-color: #00ddcb; 
+	box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.3);
+	transform: translateY(-7px);
+}
+@media only screen and (max-width: 600px) {
+ 	.btn-flotante3 {
+		font-size: 14px;
+		padding: 12px 20px;
+		bottom: 20px;
+		right: 20px;
+	}
 }
 .footer4{
     position: absolute;
     align-items: flex-end;
     width: 100vw;
     height: 10vh;
-    margin-top: 4520vh;
+    margin-top: 4120vh;
     background: #0d02ad98 ;
     top:190vh;
     z-index: 9;
@@ -1807,7 +1884,7 @@ header label:hover{
     column-gap: 1.4vw;
     row-gap: 2vh;
     grid-template-columns: repeat(3,20vw);
-    grid-template-rows: repeat(51, 49vh);
+    grid-template-rows: repeat(151, 47vh);
     color: black;
     margin:2vh 0 0 4vw;
     padding: 0; 
@@ -1825,13 +1902,29 @@ header label:hover{
     text-transform: capitalize;
     margin:0 0 1vh 0;
     padding-top: 1.8vh;
-    padding-bottom: 1.8vh;
+    padding-bottom: 0;
     border-top-left-radius: 10px;
-    border-top-right-radius:10px; 
+    border-top-right-radius:10px;
+    font-size: 1.1em;
+}
+.regionEvolucion{
+    background: #00ddcb;
+    border-radius: 50%;
+    width: 4vw;
+    height: 8vh;
+    margin: 0;
+    font-size: 0.9em;
+    margin-left: 15.2vw;
+    position: absolute;
+    text-align: center;
+    padding-top: 2.5vh;
+    color: white;
+    text-transform: capitalize;
 }
 .imgPokeEvolucion{
     width: 11vw;
     height: 21vh;
+    margin-right: 1vw;
 }
 .numPokeEvolucion{
     margin:0;
@@ -1845,33 +1938,36 @@ header label:hover{
 }
 .typesPokeEvolucion{
     text-transform: capitalize;
-    margin:  0 0 0 1vw;
+    margin:0;
     padding-top: 1.7vh;
     border-top-left-radius: 10px;
     border-top-right-radius:10px;
     border-bottom-left-radius: 10px; 
     font-size: 1.1em;
     color: rgb(255, 255, 255);
+    width: 5vw;
+    margin-left: 1vw;
 }
 .informationEvolucion{
     display: flex;
-    width: 15vw;
-    height:12.1vh;
+    width: 15.5vw;
+    height:13vh;
     font-size: 14px;
     text-align: center;
     padding-top: 1vh;
-    margin-left: 2.5vw;
+    margin-left: 2.3vw;
     align-items: stretch;
     background: #cab8cfc2; 
     border-radius: 5px;
     color: #574002;
 }
 .atributesCandy{
-    margin-right: 0.5vw;
+    margin-right: 0.6vw;
     text-transform: capitalize;
     color: rgb(255, 255, 255);
     width: 7vw;
-    padding-left: 1vw;
+    padding-left: 1.5vw;
     text-align: left;
     margin-top: 1vh;
+    width: 8vw;
 }
